#1 Fix Modal Size on Mobile

--- a/pages/main/buymodal/buymodal.less
+++ b/pages/main/buymodal/buymodal.less
@@ -1,29 +1,3 @@
-.modal {
-    text-align: center;
-}
-
-.modal:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 91%;
-}
-
-.modal-dialog {
-    display: inline-block;
-    text-align: left;
-    vertical-align: middle;
-    width: 99% !important;
-    max-width: 600px;
-
-    @media (max-width: 480px) {
-        width: auto !important;
-        height: auto !important;//91%;
-        position:  relative;
-        margin: 1px;
-        padding: 1px;
-    }
-}
 .form-control-feedback {
     top: 12px;
 }
@@ -77,12 +51,6 @@
     }
 }
 
-.modal-body {
-    @media(max-width : 480px){
-       margin-top: 28px;
-    }
-}
-
 .intl-tel-input{
         width: 100%;
 }
@@ -99,16 +67,14 @@
 }
 
 .btn-modal-confirm {
+    padding-left: 15px;
+    padding-right: 15px;
     background-color:#249007;
-    white-space: pre-line;
-
-    @media (max-width: 480px){
-        font-size: 31px  !important;
-        margin-top: 41px !important;
-    }
+    white-space: normal;
+    word-break: normal;
 
     &:hover {
-        background-color:#249007;
+        background-color: #249007;
     }
 }
 
